fix preprint and video vertical alignment:

--- a/assets/less/jomi/single.less
+++ b/assets/less/jomi/single.less
@@ -31,13 +31,12 @@
 	   .video-holder{
 		   float: left;
 		   margin:0;
-		   margin-top: -20px;
 		   padding:0;
 		}
 		// generated chapters
 		#chapters{
 		   float: left;
-		   padding: 10px 0px;
+		   padding: 0px 0px;
 		   width: 100%;
 		   h3{
 		      color: #999;
